@@ -1,2 +1,2 @@
 [InternetShortcut]
-URL=http://sleep.dashnine.org/manual
+URL=http://sleep.dashnine.org/documentation.html
