@@ -1,0 +1,5 @@
+0 => a
+1 => b
+2 => c
+Warning: unsafe data modification: @array changed during iteration at femod.sl:3
+2 => c
